--- a/about.html
+++ b/about.html
@@ -102,6 +102,7 @@
 </head>
 <body>
     <header>
+        <link rel="icon" type="image/png" href="dlo.png">
         <div class="profile-container">
             <h2>Deazi Lakpor</h2>
             <img src="profile.jpg" alt="Deazi Lakpor" class="profile-photo">
